import React from 'react';
import { FormProvider, useForm } from 'react-hook-form';
import { useTranslation } from 'react-i18next';
import { View, Text, Image } from 'react-native';
import { yupResolver } from '@hookform/resolvers/yup';
import { NavigationProp, ParamListBase } from '@react-navigation/native';
import { useNavigation } from 'expo-router';
import userLogo from '@/assets/images/exampleUserIconLogin.png';
import Button from '@/components/shared/button/button';
import ControlledInput from '@/components/shared/input/controlled-input';
import ControlledPasswordInput from '@/components/shared/password/controlled-password-input';
import { useLoginValidationSchema } from '@/components/views/login/schema/schema';
import { IPostLoginRequest } from '@/contract/auth/auth';
import { useTypedDispatch } from '@/hooks/use-store-hooks';
import { SnackbarVariantEnum, useSnackbar } from '@/providers/snackbar/snackbar-context';
import { useLoginAccountMutation } from '@/redux/api/auth/auth-api';
import { handleAuthSuccess } from '@/redux/state/auth/auth-state';
import { IApiError } from '@/types/global-types';

const Login = () => {
  const { t } = useTranslation();
  const dispatch = useTypedDispatch();
  const navigation = useNavigation<NavigationProp<ParamListBase>>();
  const { showSnackbar } = useSnackbar();
  const [loginAccount, { isLoading }] = useLoginAccountMutation();
  const loginValidationSchema = useLoginValidationSchema();

  const methods = useForm<IPostLoginRequest>({
    resolver: yupResolver(loginValidationSchema),
    defaultValues: {
      login: '',
      password: '',
    },
  });

  const { handleSubmit, reset } = methods;

  const onSubmit = async (data: IPostLoginRequest) => {
    try {
      const response = await loginAccount(data).unwrap();
      showSnackbar({ text: t('auth.login.success'), variant: SnackbarVariantEnum.SUCCESS });
      await dispatch(handleAuthSuccess(response));
      navigation.navigate('(authorized)/dashboard');
      reset();
    } catch (error: unknown) {
      const typedError = error as IApiError;
      const errorMessage = typedError.data?.message || t('auth.login.error');
      showSnackbar({ text: errorMessage, variant: SnackbarVariantEnum.ERROR });
    }
  };

  return (
    <View className="flex-1 justify-center px-4" testID="login-screen">
      <FormProvider {...methods}>
        <View className="place-self-center items-center place-items-center gap-6 px-8 w-[300px] mx-auto">
          <Image source={userLogo} style={{ width: 80, height: 80 }} resizeMode="contain" />
          <Text className="text-2xl font-bold text-primary" testID="login-title">
            {t('auth.login.title')}
          </Text>
          <ControlledInput name="login" placeholder={t('auth.login.loginPlaceholder')} placeholderTextColor="#aaa" testID="email-input" />
          <ControlledPasswordInput
            name="password"
            placeholder={t('auth.login.passwordPlaceholder')}
            placeholderTextColor="#aaa"
            testID="password-input"
          />
          <Text
            className="text-sm text-blue-300"
            testID="register-link"
            onPress={() => {
              navigation.navigate('(not-authorized)/register');
            }}
          >
            {t('auth.login.noAccount')}
          </Text>
          <Button label={t('auth.login.submit')} disabled={isLoading} onPress={handleSubmit(onSubmit)} className="px-8 py-3" testID="login-button" />
        </View>
      </FormProvider>
    </View>
  );
};

export default Login;
