...

  if (isLoading) {
    return <Loader message={t('quests.today.fetchingQuests')} />;
  }

  return (
    <View className="flex-1 p-4" testID="today-quests-screen">
      <Header
        title={t('quests.today.title')}
        isSearchVisible={isSearchVisible}
        searchQuery={searchQuery}
        setIsSearchVisible={setIsSearchVisible}
        setSearchQuery={setSearchQuery}
...
