import React from 'react';
import { FormProvider, useForm } from 'react-hook-form';
import { useTranslation } from 'react-i18next';
import { View, Text, Image } from 'react-native';
import { yupResolver } from '@hookform/resolvers/yup';
import { NavigationProp, ParamListBase } from '@react-navigation/native';
import { useNavigation } from 'expo-router';
import userLogo from '@/assets/images/exampleUserIconLogin.png';
import Button from '@/components/shared/button/button';
import ControlledInput from '@/components/shared/input/controlled-input';
import ControlledPasswordInput from '@/components/shared/password/controlled-password-input';
import { useRegisterValidationSchema } from '@/components/views/register/schema/schema';
import { IPostRegisterRequest } from '@/contract/auth/auth';
import { useTypedDispatch } from '@/hooks/use-store-hooks';
import { SnackbarVariantEnum, useSnackbar } from '@/providers/snackbar/snackbar-context';
import { useRegisterAccountMutation } from '@/redux/api/auth/auth-api';
import { handleAuthSuccess } from '@/redux/state/auth/auth-state';
import { IApiError } from '@/types/global-types';

const Register = () => {
  const { t } = useTranslation();
  const dispatch = useTypedDispatch();
  const { showSnackbar } = useSnackbar();
  const navigation = useNavigation<NavigationProp<ParamListBase>>();
  const [createAccount, { isLoading }] = useRegisterAccountMutation();
  const registerValidationSchema = useRegisterValidationSchema();

  const methods = useForm<IPostRegisterRequest>({
    resolver: yupResolver(registerValidationSchema),
    defaultValues: {
      email: '',
      password: '',
    },
  });

  const { handleSubmit, reset } = methods;

  const onSubmit = async (data: IPostRegisterRequest) => {
    try {
      const response = await createAccount(data).unwrap();
      showSnackbar({ text: t('auth.register.success'), variant: SnackbarVariantEnum.SUCCESS });
      await dispatch(handleAuthSuccess(response));
      navigation.navigate('(authorized)/dashboard');
      reset();
    } catch (error: unknown) {
      const typedError = error as IApiError;
      const errorMessage = typedError.data?.message || t('auth.register.error');
      showSnackbar({ text: errorMessage, variant: SnackbarVariantEnum.ERROR });
    }
  };

  return (
    <View className="flex-1 justify-center px-4" testID="register-screen">
      <FormProvider {...methods}>
        <View className="place-self-center items-center place-items-center gap-6 px-8 w-[300px] mx-auto">
          <Image source={userLogo} style={{ width: 80, height: 80 }} resizeMode="contain" />
          <Text className="text-2xl font-bold text-primary" testID="register-title">
            {t('auth.register.title')}
          </Text>
          <ControlledInput
            name="email"
            className="py-1"
            placeholder={t('auth.register.emailPlaceholder')}
            placeholderTextColor="#aaa"
            testID="email-input"
          />
          <ControlledPasswordInput
            name="password"
            className="py-1"
            placeholder={t('auth.register.passwordPlaceholder')}
            placeholderTextColor="#aaa"
            testID="password-input"
          />
          <Text
            className="text-sm text-blue-300"
            testID="login-link"
            onPress={() => {
              navigation.navigate('(not-authorized)/login');
            }}
          >
            {t('auth.register.hasAccount')}
          </Text>
          <Button
            label={t('auth.register.submit')}
            disabled={isLoading}
            onPress={handleSubmit(onSubmit)}
            className="px-8 py-3"
            testID="register-button"
          />
        </View>
      </FormProvider>
    </View>
  );
};

export default Register;
